Fix firefox issues:
* Fix unfocusable text inputs on project page (refined selector for
  disableSelection() call)

* Fix incorrect wrapping of piles within scroll area. (Firefox handles
  this a bit strangely. I had to calculate the total width of all the
  piles and set the list of #pile_list to it programmatically to thoroughly
  fix the issue. However, width is set to the oversized value of 9999px
  in css files. This kinda fixes the issue itself, but makes it too wide.
  Thats the reason for the dynamic calculation.)

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -278,7 +278,7 @@ li.card_item div.milestone {
         height: 90%;
         width: 100%;
     /*    overflow-y: hidden; */
-        overflow-x: auto;
+        overflow-x: scroll;
     }
 
     div#piles ul#pile_list {
